Successfully added fade transition to buttonsDiv and header. However, I failed to do the same with the elements that are added with innerHTML from JS and the elements whose visibility is toggled from JS functions. I fixed the problem of contact icons not being clickable.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,6 +32,7 @@ body {
     width: 100%;
     height: 60px;
     position: absolute;
+    left: 0;
     text-align: right;
     padding-top: 7px;
     
@@ -73,13 +74,20 @@ body {
     position: relative;
 }
 
+header {
+    margin: 0 20% 0 20%;
+}
+
+
 .headerDiv{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding-top: 3em;
+    padding-top: 2em;
     color: rgb(76, 72, 67);
+
+    animation: fadeIn 2s;
 }
 
 .headerDiv h1, .headerDiv h2 {
@@ -103,6 +111,28 @@ body {
     margin-top: 0;
     font-size: 30px;
 }
+
+//transition
+@keyframes fadeOut{
+    to{opacity: 0;}
+}
+.fadeOut {
+    transition: 1s ease-out;
+    opacity: 0;
+}
+
+@keyframes fadeIn {
+    from{opacity: 0;}
+    to{opacity: 0.25;}
+    to{opacity: 0.5;}
+    to{opacity: 0.75;}
+    to{opacity: 1;}
+}
+.fadeIn {
+    transition: 1s ease-in-out;
+    opacity: 1;
+}
+
 
 .cumulScoreBox {
     position: absolute;
@@ -135,12 +165,17 @@ body {
     align-items: center;
     outline: none;
     margin-top: 3rem;
+    animation: fadeIn 2s;
  //   
 }
+
+/*.buttonsDiv.active {
+    animation: fadeOut 7s;
+}*/
     
-    #rock, #paper, #scissor{
+    .rock, .paper, .scissor{
         background-color: transparent;
-        transition-duration: 500ms;
+       // transition-duration: 500ms;
         width: 400px;    
         height: 350px;
         border-width: 10px;
@@ -156,7 +191,7 @@ body {
         z-index: 7;
         }
 
-    #rockImg{
+    .rockImg{
         margin: auto;
         width: 40%;
         justify-content:center;
@@ -164,24 +199,24 @@ body {
         opacity: 0;
     }
 
-    #paperImg{
-        @extend #rockImg;
+    .paperImg{
+        @extend .rockImg;
         height: auto;
     }
        
-    #scissorImg{
-        @extend #paperImg;
+    .scissorImg{
+        @extend .paperImg;
         height: 50%;
         width: 50%; 
     }
     
-    #rock:hover, #paper:hover, #scissor:hover {
+    .rock:hover, .paper:hover, .scissor:hover {
         transition-duration: 650ms;
         border-width: 19px;
         border-color: rgba(76, 72, 67, 0.954);
         border-style:double;
 
-        #rockImg, #paperImg, #scissorImg {
+        .rockImg, .paperImg, .scissorImg {
             transition-duration: 500ms;
             opacity: 1;
         }
